<resources>
    <string name="app_name" translatable="false">BottomUpApp</string>

    <string name="core_push_config_key">e8000d90ff3f02d05d591de8eccb8012</string>
    <integer name="core_push_notification_style_statusBar">0</integer>
    <integer name="core_push_notification_style_dialog">1</integer>
    <integer name="core_push_notification_style_dialog_and_statusBar">2</integer>

    <!--　共通　-->
    <string name="OK" translatable="false">OK</string>
    <string name="Cancel">キャンセル</string>
    <string name="YES" translatable="false">はい</string>
    <string name="NO" translatable="false">いいえ</string>

    <string name="loading">接続中・・・</string>

    <string name="book_nav_title">ボトムアップ</string>
    <string name="lecture_nav_title">FACEBOOK</string>
    <string name="bottomup_nav_title">BOOKS</string>
    <string name="report_nav_title">講演日程</string>
    <string name="profile_nav_title">プロフィール</string>
    <string name="bottomup_title">ボトムアップ理論とは</string>
    <string name="setting">設  定</string>
    <string name="setting_title">個人設定</string>
    <string name="terms_menu_title">利用規約</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="register_title">ユーザー登録</string>
    <string name="name_title">フルネーム</string>
    <string name="email_title">メールアドレス</string>
    <string name="gender_title">性別</string>
    <string name="hint_register">未回答</string>
    <string name="address_title">居住地</string>
    <string name="apply_title">活用法</string>
    <string name="register_btn">登録</string>
    <string name="input_err_title">入力エラー</string>
    <string name="input_err_msg">を正確に入力してください。</string>
    <string name="terms_title">このアプリの利用規約に同意する</string>
    <string name="agree_btn">次  へ</string>

    <string-array name="gender_arr">
        <item>男性</item>
        <item>女性</item>
        <item>回答しない</item>
    </string-array>

    <string-array name="apply_arr">
        <item>ビジネス</item>
        <item>自己啓発</item>
        <item>スポーツ</item>
        <item>子育て</item>
        <item>教育</item>
        <item>その他</item>
    </string-array>

    <string-array name="region_arr">
        <item>北海道</item>
        <item>青森県</item>
        <item>岩手県</item>
        <item>宮城県</item>
        <item>秋田県</item>
        <item>山形県</item>
        <item>福島県</item>
        <item>茨城県</item>
        <item>栃木県</item>
        <item>群馬県</item>
        <item>埼玉県</item>
        <item>千葉県</item>
        <item>東京都</item>
        <item>神奈川県</item>
        <item>新潟県</item>
        <item>富山県</item>
        <item>石川県</item>
        <item>福井県</item>
        <item>山梨県</item>
        <item>長野県</item>
        <item>岐阜県</item>
        <item>静岡県</item>
        <item>愛知県</item>
        <item>三重県</item>
        <item>滋賀県</item>
        <item>京都府</item>
        <item>大阪府</item>
        <item>兵庫県</item>
        <item>奈良県</item>
        <item>和歌山県</item>
        <item>鳥取県</item>
        <item>島根県</item>
        <item>岡山県</item>
        <item>広島県</item>
        <item>山口県</item>
        <item>徳島県</item>
        <item>香川県</item>
        <item>愛媛県</item>
        <item>高知県</item>
        <item>福岡県</item>
        <item>佐賀県</item>
        <item>長崎県</item>
        <item>熊本県</item>
        <item>大分県</item>
        <item>宮崎県</item>
        <item>鹿児島県</item>
        <item>沖縄県</item>
        <item>海外</item>
        <item>回答しない</item>
    </string-array>

</resources>
