<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TermsAndUseActivity">

    <TextView
        android:id="@+id/titleTxt"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:textAlignment="center"
        android:text="@string/terms_menu_title"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"/>

    <RelativeLayout
        android:id="@+id/close_btn"
        android:layout_width="?actionBarSize"
        android:layout_height="?actionBarSize"
        android:layout_alignParentRight="true" >

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_back"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="20dp"/>

    </RelativeLayout>

    <WebView
        android:id="@+id/contentTxt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_above="@+id/checkLayout"
        android:layout_below="@+id/titleTxt"/>

    <LinearLayout
        android:id="@+id/checkLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/btnLayout">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="20dp"
            android:text="@string/terms_title"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/agreeBtn"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/agree_btn"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"/>

    </LinearLayout>

</RelativeLayout>