<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.RegisterActivity">

    <TextView
        android:id="@+id/titleTxt"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:textAlignment="center"
        android:text="@string/register_title"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:text="@string/name_title"
                android:gravity="center|left"
                android:textSize="15dp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:text="*"
                android:padding="40px"
                android:textColor="@color/colorAccent"/>

            <EditText
                android:id="@+id/nameTxt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border_text"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/border_color"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:text="@string/email_title"
                android:gravity="center|left"
                android:textSize="15dp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:text="*"
                android:padding="40px"
                android:textColor="@color/colorAccent"/>

            <EditText
                android:id="@+id/emailTxt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border_text"
                android:inputType="textEmailAddress"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:layout_marginBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/border_color"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:text="@string/gender_title"
                android:gravity="center|left"
                android:textSize="15dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/genderTxt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border_text"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:maxLines="1"
                android:gravity="center|left"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/border_color"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:text="@string/address_title"
                android:gravity="center|left"
                android:textSize="15dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/addressTxt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border_text"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:maxLines="1"
                android:gravity="center|left"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/border_color"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="110dp"
                android:layout_height="45dp"
                android:text="@string/apply_title"
                android:gravity="center|left"
                android:textSize="15dp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:text="*"
                android:padding="40px"
                android:textColor="@color/colorAccent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/applyTxt1"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/border_text"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:maxLines="1"
                    android:gravity="center|left"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>

                <EditText
                    android:id="@+id/applyTxt2"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/border_text"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:visibility="gone"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/border_color"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/register_btn"
            android:textStyle="bold"
            android:textSize="16sp"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>